# lepton-discord

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run_api.py  run_bot.py
docs/: index.html
scripts/: agent_demo.py  e2e_demo.py  fund_agent.py  sync_commands.py  traction_report.py
src/: __init__.py
src/agent/: __init__.py  llm.py  planner.py  tools.py
src/api/: app.py  executor.py  paywall.py
src/bot/: __init__.py  client.py  payer.py
src/domain/: __init__.py  models.py  traction.py
src/payments/: __init__.py  config.py  facilitator.py  store.py
tests/: test_agent.py  test_demo_api.py  test_domain.py  test_executor.py  test_llm.py  test_store.py  test_traction.py
